--- a/PMSM.vcxproj.filters
+++ b/PMSM.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClInclude Include="PI.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="transformations.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.c">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="PI.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="transformations.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
